--- a/src/main/webapp/common.css
+++ b/src/main/webapp/common.css
@@ -12,3 +12,13 @@ material-icon {
 .full-height {
 	height: 100%;
 }
+
+.tile {
+	display: inline-block;
+	min-width: 250px;
+}
+
+a.unstyled {
+	text-decoration: none;
+	color: in
+}
