--- a/src/main/webapp/components/sidebar/menu.html
+++ b/src/main/webapp/components/sidebar/menu.html
@@ -1,30 +1,29 @@
-<a href="#/activity" class="menu-item" ink-ripple>
+<button ng-href="/#/project/{{routeParams.projectKey}}/activity" class="menu-item" ink-ripple>
 	<material-icon icon="/img/icons/ic_flash_on_24px.svg"></material-icon>
-		<span>Activity</span>
-	<div class="material-ripple-container"></div>
-</a>
-<a href="#/task" class="menu-item" ink-ripple>
+	<span>Activity</span>
+</button>
+
+<button ng-href="/#/project/{{routeParams.projectKey}}/tasks" class="menu-item" ink-ripple>
 	<material-icon icon="/img/icons/ic_list_24px.svg"></material-icon>
-			<span>Tasks</span>
-	<div class="material-ripple-container"></div>
-</a>
-<a href="#/file" class="menu-item active" ink-ripple>
+	<span>Tasks</span>
+</button>
+
+<button ng-href="/#/project/{{routeParams.projectKey}}/files" class="menu-item" ink-ripple>
 	<material-icon icon="/img/icons/ic_folder_shared_24px.svg"></material-icon>
-			<span>Files</span>
-	<div class="material-ripple-container"></div>
-</a>
-<a href="#/meeting" class="menu-item" ink-ripple>
+	<span>Files</span>
+</button>
+
+<button ng-href="/#/project/{{routeParams.projectKey}}/meetings" class="menu-item" ink-ripple>
 	<material-icon icon="/img/icons/ic_event_24px.svg"></material-icon>
-			<span>Meetings</span>
-	<div class="material-ripple-container"></div>
-</a>
-<a href="#/discussion" class="menu-item" ink-ripple>
+	<span>Meetings</span>
+</button>
+
+<button ng-href="/#/project/{{routeParams.projectKey}}/discussions" class="menu-item" ink-ripple>
 	<material-icon icon="/img/icons/ic_forum_24px.svg"></material-icon>
-			<span>Discussions</span>
-	<div class="material-ripple-container"></div>
-</a>
-<a href="#/member" class="menu-item" ink-ripple>
+	<span>Discussions</span>
+</button>
+
+<button ng-href="/#/project/{{routeParams.projectKey}}/members" class="menu-item" ink-ripple>
 	<material-icon icon="/img/icons/ic_group_24px.svg"></material-icon>
-			<span>Members</span>
-	<div class="material-ripple-container"></div>
-</a>
+	<span>Members</span>
+</button>
