project list data binding + apiclient change

--- a/src/main/webapp/components/project/list.html
+++ b/src/main/webapp/components/project/list.html
@@ -1,6 +1,6 @@
 <div style="text-align:center">
 
-	<a class="unstyled" ng-repeat="entity in entities" ng-href="#/project/{{entity.key}}">
+	<a class="unstyled" ng-repeat="entity in entityList.items" ng-href="#/project/{{entity.key}}">
 		<material-whiteframe class="tile material-whiteframe-z1" >
 			<h3>{{entity.name}}</h3>
 		</material-whiteframe>
