--- a/src/main/webapp/components/sidebar/menu.html
+++ b/src/main/webapp/components/sidebar/menu.html
@@ -1,29 +1,29 @@
-<button ng-href="/#/project/{{routeParams.projectKey}}/activity" class="menu-item" route-active="'project'" ink-ripple>
+<a ng-href="/#/project/{{routeParams.projectKey}}" class="menu-item" route-active="'project'" ink-ripple>
 	<material-icon icon="/img/icons/ic_flash_on_24px.svg"></material-icon>
 	<span>Activity</span>
-</button>
+</a>
 
-<button ng-href="/#/project/{{routeParams.projectKey}}/tasks" class="menu-item" route-active="'tasks'" ink-ripple>
+<a ng-href="/#/project/{{routeParams.projectKey}}/tasks" class="menu-item" route-active="'tasks'" ink-ripple>
 	<material-icon icon="/img/icons/ic_list_24px.svg"></material-icon>
 	<span>Tasks</span>
-</button>
+</a>
 
-<button ng-href="/#/project/{{routeParams.projectKey}}/files" class="menu-item" route-active="'files'" ink-ripple>
+<a ng-href="/#/project/{{routeParams.projectKey}}/files" class="menu-item" route-active="'files'" ink-ripple>
 	<material-icon icon="/img/icons/ic_folder_shared_24px.svg"></material-icon>
 	<span>Files</span>
-</button>
+</a>
 
-<button ng-href="/#/project/{{routeParams.projectKey}}/meetings" class="menu-item" route-active="'meetings'" ink-ripple>
+<a ng-href="/#/project/{{routeParams.projectKey}}/meetings" class="menu-item" route-active="'meetings'" ink-ripple>
 	<material-icon icon="/img/icons/ic_event_24px.svg"></material-icon>
 	<span>Meetings</span>
-</button>
+</a>
 
-<button ng-href="/#/project/{{routeParams.projectKey}}/discussions" class="menu-item" route-active="'discussions'" ink-ripple>
+<a ng-href="/#/project/{{routeParams.projectKey}}/discussions" class="menu-item" route-active="'discussions'" ink-ripple>
 	<material-icon icon="/img/icons/ic_forum_24px.svg"></material-icon>
 	<span>Discussions</span>
-</button>
+</a>
 
-<button ng-href="/#/project/{{routeParams.projectKey}}/members" class="menu-item" route-active="'tasks'" ink-ripple>
+<a ng-href="/#/project/{{routeParams.projectKey}}/members" class="menu-item" route-active="'members'" ink-ripple>
 	<material-icon icon="/img/icons/ic_group_24px.svg"></material-icon>
 	<span>Members</span>
-</button>
+</a>
