--- a/src/main/webapp/components/task/list.html
+++ b/src/main/webapp/components/task/list.html
@@ -1,3 +1,9 @@
+<material-tabs class="material-theme-transparent" selected="tabSelected" ng-init="tabSelected=0">
+	<material-tab label="Assigned to me"></material-tab>
+	<material-tab label="Upcoming"></material-tab>
+	<material-tab label="All"></material-tab>
+</material-tabs>
+
 <material-whiteframe class="material-whiteframe-z1" layout layout-align="center center" ng-repeat="(groupValue,taskGroupedList) in taskList.items | groupBy:'completed'">
 	<material-content flex>
 		<section>
