--- a/src/main/webapp/material-theme-transparent.css
+++ b/src/main/webapp/material-theme-transparent.css
@@ -2,11 +2,10 @@
 	background-color: transparent;
 }
 
-.material-theme-transparent material-ink-bar {
+.material-theme-transparent material-tabs-ink-bar {
 	background-color: #4285f4;
 }
 
-.material-theme-transparent material-tab-label,
-.material-theme-transparent material-tab-label.active {
+.material-theme-transparent material-tab.active {
 	color: #3e50b4;
 }
