--- a/src/main/webapp/components/sidebar/menu.html
+++ b/src/main/webapp/components/sidebar/menu.html
@@ -3,27 +3,27 @@
 	<span>Activity</span>
 </a>
 
-<a ng-href="/#/project/{{routeParams.projectKey}}/tasks" class="menu-item" route-active="'tasks'" ink-ripple>
+<a ng-href="/#/project/{{routeParams.projectKey}}/tasks" class="menu-item" route-active="['task-list','task-edit']" ink-ripple>
 	<material-icon icon="/img/icons/ic_list_24px.svg"></material-icon>
 	<span>Tasks</span>
 </a>
 
-<a ng-href="/#/project/{{routeParams.projectKey}}/files" class="menu-item" route-active="'files'" ink-ripple>
+<a ng-href="/#/project/{{routeParams.projectKey}}/files" class="menu-item" route-active="'file-list'" ink-ripple>
 	<material-icon icon="/img/icons/ic_folder_shared_24px.svg"></material-icon>
 	<span>Files</span>
 </a>
 
-<a ng-href="/#/project/{{routeParams.projectKey}}/meetings" class="menu-item" route-active="'meetings'" ink-ripple>
+<a ng-href="/#/project/{{routeParams.projectKey}}/meetings" class="menu-item" route-active="'meeting-list'" ink-ripple>
 	<material-icon icon="/img/icons/ic_event_24px.svg"></material-icon>
 	<span>Meetings</span>
 </a>
 
-<a ng-href="/#/project/{{routeParams.projectKey}}/discussions" class="menu-item" route-active="'discussions'" ink-ripple>
+<a ng-href="/#/project/{{routeParams.projectKey}}/discussions" class="menu-item" route-active="'discussion-list'" ink-ripple>
 	<material-icon icon="/img/icons/ic_forum_24px.svg"></material-icon>
 	<span>Discussions</span>
 </a>
 
-<a ng-href="/#/project/{{routeParams.projectKey}}/members" class="menu-item" route-active="'members'" ink-ripple>
+<a ng-href="/#/project/{{routeParams.projectKey}}/members" class="menu-item" route-active="'member-list'" ink-ripple>
 	<material-icon icon="/img/icons/ic_group_24px.svg"></material-icon>
 	<span>Members</span>
 </a>
