task form implementation draft

--- a/src/main/webapp/common.css
+++ b/src/main/webapp/common.css
@@ -28,5 +28,29 @@ a.material-button-inner > material-icon {
 
 a.unstyled {
 	text-decoration: none;
-	color: in
+	color: inherit;
+}
+
+.tf-float-full-with > input{
+	width: 100%;
+	margin:0;
+}
+
+.input-lg > input{
+	font-size:26px;
+}
+
+material-input-group, 
+.material-input-group {
+	margin:10px;
+}
+
+
+/* Date placeholder with tf on Chrome fix */
+material-input-group > input[type=date] {
+	-webkit-text-fill-color: transparent;
+}
+material-input-group.material-input-has-value > input[type=date],
+material-input-group.material-input-focused > input[type=date] {
+	-webkit-text-fill-color:initial;
 }
