--- a/src/main/webapp/components/task/edit.html
+++ b/src/main/webapp/components/task/edit.html
@@ -25,7 +25,9 @@
 			</div>
 			
 			<div layout="horizontal" layout-align="center center">
-				<tf-float label="Description" value="task.description" type="textarea" class="tf-float-full-with"></tf-float>
+				<div flex>
+					<tf-float label="Description" value="task.description" type="textarea" class="tf-float-full-with"></tf-float>
+				</div>
 			</div>
 		
       
