--- a/src/main/webapp/components/task/list.html
+++ b/src/main/webapp/components/task/list.html
@@ -4,7 +4,11 @@
 	<material-tab label="All"></material-tab>
 </material-tabs>
 
-<material-whiteframe class="task-group material-whiteframe-z1" layout layout-align="center center" ng-repeat="(groupValue,taskGroupedList) in taskList.items | groupBy:'completed'">
+<div layout layout-align="center center" class="spinner-container" ng-if="!taskList.$resolved">
+	<material-circular-progress mode="indeterminate" ></material-circular-progress>
+</div>
+
+<material-whiteframe class="task-group material-whiteframe-z1" layout layout-align="center center" ng-repeat="(groupValue,taskGroupedList) in taskList.items | groupBy:'completed'" ng-if="taskList.$resolved">
 	<material-content flex>
 		<section>
 			<material-list layout="vertical"> 
