model refactoring due to endpoints KEY field bug/undoc feature

--- a/src/main/webapp/components/project/edit-modal.html
+++ b/src/main/webapp/components/project/edit-modal.html
@@ -1,6 +1,6 @@
 <material-dialog aria-label="Create or edit a Project">	
 	<div class="dialog-content">
-		<h2 class="dialog-title">{{project.key?'Edit Project':'Create new Project'}}</h2>
+		<h2 class="dialog-title">{{project.id?'Edit Project':'Create new Project'}}</h2>
 		<material-content>
 			<form>
 			  <tf-float label="Project Name" value="project.name"> </tf-float>
