--- a/src/main/webapp/components/sidebar/menu.html
+++ b/src/main/webapp/components/sidebar/menu.html
@@ -1,29 +1,29 @@
-<a ng-href="/#/project/{{routeParams.projectKey}}" class="menu-item" route-active="'project'" ink-ripple>
+<a ng-href="/#/project/{{routeParams.projectId}}" class="menu-item" route-active="'project'" ink-ripple>
 	<material-icon icon="/img/icons/ic_flash_on_24px.svg"></material-icon>
 	<span>Activity</span>
 </a>
 
-<a ng-href="/#/project/{{routeParams.projectKey}}/tasks" class="menu-item" route-active="['task-list','task-edit']" ink-ripple>
+<a ng-href="/#/project/{{routeParams.projectId}}/tasks" class="menu-item" route-active="['task-list','task-edit']" ink-ripple>
 	<material-icon icon="/img/icons/ic_list_24px.svg"></material-icon>
 	<span>Tasks</span>
 </a>
 
-<a ng-href="/#/project/{{routeParams.projectKey}}/files" class="menu-item" route-active="'file-list'" ink-ripple>
+<a ng-href="/#/project/{{routeParams.projectId}}/files" class="menu-item" route-active="'file-list'" ink-ripple>
 	<material-icon icon="/img/icons/ic_folder_shared_24px.svg"></material-icon>
 	<span>Files</span>
 </a>
 
-<a ng-href="/#/project/{{routeParams.projectKey}}/meetings" class="menu-item" route-active="'meeting-list'" ink-ripple>
+<a ng-href="/#/project/{{routeParams.projectId}}/meetings" class="menu-item" route-active="'meeting-list'" ink-ripple>
 	<material-icon icon="/img/icons/ic_event_24px.svg"></material-icon>
 	<span>Meetings</span>
 </a>
 
-<a ng-href="/#/project/{{routeParams.projectKey}}/discussions" class="menu-item" route-active="'discussion-list'" ink-ripple>
+<a ng-href="/#/project/{{routeParams.projectId}}/discussions" class="menu-item" route-active="'discussion-list'" ink-ripple>
 	<material-icon icon="/img/icons/ic_forum_24px.svg"></material-icon>
 	<span>Discussions</span>
 </a>
 
-<a ng-href="/#/project/{{routeParams.projectKey}}/members" class="menu-item" route-active="'member-list'" ink-ripple>
+<a ng-href="/#/project/{{routeParams.projectId}}/members" class="menu-item" route-active="'member-list'" ink-ripple>
 	<material-icon icon="/img/icons/ic_group_24px.svg"></material-icon>
 	<span>Members</span>
 </a>
