--- a/src/main/webapp/components/project/list.html
+++ b/src/main/webapp/components/project/list.html
@@ -4,7 +4,7 @@
 		<material-circular-progress mode="indeterminate" ></material-circular-progress>
 	</div>
 
-	<a class="unstyled" ng-repeat="entity in entityList.items" ng-href="#/project/{{entity.key}}" ng-if="entityList.$resolved">
+	<a class="unstyled" ng-repeat="entity in entityList.items" ng-href="#/project/{{entity.id}}" ng-if="entityList.$resolved">
 		<material-whiteframe class="tile material-whiteframe-z1" >
 			<h3>{{entity.name}}</h3>
 		</material-whiteframe>
