--- a/src/main/webapp/components/task/list-fab.html
+++ b/src/main/webapp/components/task/list-fab.html
@@ -1,5 +1,5 @@
 <span ng-controller='taskListFabController'>
-	<material-button class="material-button-fab material-button-fab-bottom-right material-theme-red" ng-href="/#/project/{{routeParams.projectKey}}/task">
+	<material-button class="material-button-fab material-button-fab-bottom-right material-theme-red" ng-href="/#/project/{{routeParams.projectId}}/task">
 		<material-icon icon="/img/icons/ic_add_24px.svg"></material-icon>
 	</material-button>
 </span>
