--- a/src/main/webapp/components/project/list-fab.html
+++ b/src/main/webapp/components/project/list-fab.html
@@ -1,5 +1,6 @@
 <span ng-controller='projectListFabController'>
 	<material-button class="material-button-fab material-button-fab-bottom-right material-theme-red" ng-click="fabAdd($event)">
 		<material-icon icon="/img/icons/ic_add_24px.svg"></material-icon>
+		<material-tooltip>Create new Project</material-tooltip>
 	</material-button>
 </span>
