changed circular spinner bg

--- a/src/main/webapp/material-theme-mods.css
+++ b/src/main/webapp/material-theme-mods.css
@@ -9,3 +9,7 @@
 .material-theme-transparent material-tab.active {
 	color: #3e50b4;
 }
+
+material-circular-progress .inset {
+	background: #ececec;
+}
