--- a/src/main/webapp/components/sidebar/menu.html
+++ b/src/main/webapp/components/sidebar/menu.html
@@ -18,7 +18,7 @@
 	<span>Meetings</span>
 </a>
 
-<a ng-href="/#/project/{{routeParams.projectId}}/discussions" class="menu-item" route-active="'discussion-list'" ink-ripple>
+<a ng-href="/#/project/{{routeParams.projectId}}/discussions" class="menu-item" route-active="'discussions'" ink-ripple>
 	<material-icon icon="/img/icons/ic_forum_24px.svg"></material-icon>
 	<span>Discussions</span>
 </a>
