first login implementationù

--- a/src/main/webapp/app.css
+++ b/src/main/webapp/app.css
@@ -70,3 +70,10 @@ material-whiteframe.fillview {
     bottom: 46px;
     top: 16px;
 }
+
+#user-info > * {
+	vertical-align: middle;	
+}
+#user-info .face {
+	margin-right: 0;
+}
