--- a/src/main/webapp/material-theme-mods.css
+++ b/src/main/webapp/material-theme-mods.css
@@ -13,3 +13,7 @@
 material-circular-progress .inset {
 	background: #ececec;
 }
+
+.material-theme-light material-button {
+	color: rgb(68, 68, 68) !important;
+}
