--- a/src/main/webapp/app.css
+++ b/src/main/webapp/app.css
@@ -77,3 +77,10 @@ material-whiteframe.fillview {
 #user-info .face {
 	margin-right: 0;
 }
+
+#teampot-intro-logo {
+	max-width: 400px; 
+	margin:50px auto; 
+	padding:0 50px; 
+	text-align: center;
+}
