--- a/src/main/webapp/common.css
+++ b/src/main/webapp/common.css
@@ -62,3 +62,10 @@ material-input-group.material-input-focused > input[type=date] {
 	width: 48px;
 	margin: 16px;
 }
+
+
+.image-responsive {
+	max-width: 100%;
+	margin:0 auto;
+	display: inline-block;
+}
