diffs now are a Map, not a List. Basic diffs UI for tasks

--- a/src/main/webapp/components/activity/item-TaskActivityEvent.html
+++ b/src/main/webapp/components/activity/item-TaskActivityEvent.html
@@ -1,4 +1,19 @@
 <div flex>
-	<h3><a ng-href="#/project/{{project.id}}/task/{{activity.task.id}}">{{activity.task.title}}</a></h3>
-	<p>{{activity.task.description}}</p>
+	<h3>
+		<span ng-switch on="activity.diffs['/title'] !== undefined">
+			<span ng-switch-when="true">
+				<ins>{{activity.diffs['/title'].newValue}}</ins>
+				<del>{{activity.diffs['/title'].oldValue}}</del>
+			</span>
+			<span ng-switch-default>{{activity.task.title}}</span>
+		</span>
+	</h3>
+	<div ng-switch on="activity.diffs['/description'] !== undefined">
+		<div ng-switch-when="true">
+			<p><ins>{{activity.diffs['/description'].newValue}}</ins></p>
+			<p><del>{{activity.diffs['/description'].oldValue}}</del></p>
+		</div>
+		<p ng-switch-default>{{activity.task.description}}</p>
+	</div>
+	
 </div>
