--- a/src/main/webapp/components/file/list.html
+++ b/src/main/webapp/components/file/list.html
@@ -4,6 +4,6 @@
 
 <material-whiteframe class="fillview material-whiteframe-z1" layout layout-align="center center" ng-show="project.$resolved && iframeready">
 	<material-content flex style="height:100%; overflow:hidden;">
-		<iframe ng-src="{{iframeSrc}}" style="width: 100%; height: 100%" frameborder="0" iframe-onload="iframeLoaded()"></iframe>
+		<iframe id="fileListIframe" ng-src="{{iframeSrc}}" style="width: 100%; height: 100%" frameborder="0" iframe-onload="iframeLoaded()"></iframe>
 	</material-content>
 </material-whiteframe>
