--- a/src/main/webapp/components/sidebar/menu.html
+++ b/src/main/webapp/components/sidebar/menu.html
@@ -4,7 +4,7 @@
 </a>
 
 <a ng-href="/#/project/{{routeParams.projectId}}/tasks" class="menu-item" route-active="['task-list','task-edit']" ink-ripple>
-	<material-icon icon="/img/icons/ic_list_24px.svg"></material-icon>
+	<material-icon icon="/img/icons/ic_view_list_24px.svg"></material-icon>
 	<span>Tasks</span>
 </a>
 
