--- a/src/main/webapp/app.css
+++ b/src/main/webapp/app.css
@@ -84,3 +84,9 @@ material-whiteframe.fillview {
 	padding:0 50px; 
 	text-align: center;
 }
+
+.empty-list-message {
+	text-align: center;
+	margin:25px;
+	color:#A8A8A8;
+}
