--- a/src/main/webapp/app.css
+++ b/src/main/webapp/app.css
@@ -55,7 +55,7 @@ html {
 }
 
 
-[ng-view] .tabs-header-items-container {
+#appview .tabs-header-items-container {
 	margin:0 20px;
 }
 
@@ -89,4 +89,8 @@ material-whiteframe.fillview {
 	text-align: center;
 	margin:25px;
 	color:#A8A8A8;
+}
+
+#appview material-circular-progress .inset {
+	background: #ececec;
 }
