basic meeting CRUD implementation

--- a/src/main/webapp/components/sidebar/menu.html
+++ b/src/main/webapp/components/sidebar/menu.html
@@ -13,7 +13,7 @@
 	<span>Files</span>
 </a>
 
-<a ng-href="/#/project/{{routeParams.projectId}}/meetings" class="menu-item" route-active="'meeting-list'" ink-ripple>
+<a ng-href="/#/project/{{routeParams.projectId}}/meetings" class="menu-item" route-active="['meeting-list','meeting-edit']" ink-ripple>
 	<material-icon icon="/img/icons/ic_event_24px.svg"></material-icon>
 	<span>Meetings</span>
 </a>
