--- a/src/main/webapp/components/activity/list.html
+++ b/src/main/webapp/components/activity/list.html
@@ -17,6 +17,7 @@
 							<span ng-switch on="activity.activityType">
 								<material-icon ng-switch-when="TaskActivityEvent" icon="/img/icons/ic_view_list_48px.svg"></material-icon>
 								<material-icon ng-switch-when="ProjectActivityEvent" icon="/img/icons/ic_info_outline_48px.svg"></material-icon>
+								<material-icon ng-switch-when="MeetingActivityEvent" icon="/img/icons/ic_event_48px.svg"></material-icon>
 								<material-icon ng-switch-default icon="/img/icons/ic_info_outline_48px.svg"></material-icon>
 							</span>
 							{{activity.verb}}
