first member management implementation

--- a/src/main/webapp/components/activity/list.html
+++ b/src/main/webapp/components/activity/list.html
@@ -30,7 +30,7 @@
 								<small>{{activity.timestamp|date:'shortDate'}}<br/><small>{{activity.timestamp|date:'shortTime'}}</small></small>
 							</div>
 							<div layout="vertical" layout-align="center center">
-								<img class="face" src="about:blank" ng-src="{{activity.actor.iconUrl}}"/>
+								<img class="face" src="about:blank" ng-src="{{activity.actor.iconUrl ? activity.actor.iconUrl : '/img/face.png'}}"/>
 								<small>{{activity.actor.firstName}} {{activity.actor.lastName}}</small>
 							</div>
 						</div>
