--- a/src/main/webapp/components/meeting/list.html
+++ b/src/main/webapp/components/meeting/list.html
@@ -6,8 +6,8 @@
 	<p class="empty-list-message">No meetings for this project</p>
 </div>
 
-<section>
-	<material-subheader class="material-subheader-colored">Upcoming meetings</material-subheader>
+<section ng-if="meetingList.$resolved && (meetingList.items | filter:{past:false}).length>0">
+	<material-subheader>Upcoming meetings</material-subheader>
 	<material-whiteframe class="material-whiteframe-z1" layout layout-align="center center" ng-repeat="meeting in meetingList.items | filter:{past:false}" ng-if="meetingList.$resolved && meetingList.items.length>0">
 		<material-content flex>
 			<section>
@@ -29,7 +29,7 @@
 	</material-whiteframe>
 </section>
 
-<section>
+<section  ng-if="meetingList.$resolved && (meetingList.items | filter:{past:true}).length>0">
 	<material-subheader>Past meetings</material-subheader>
 	<material-whiteframe class="material-whiteframe-z1" layout layout-align="center center" ng-repeat="meeting in meetingList.items | filter:{past:true}" ng-if="meetingList.$resolved && meetingList.items.length>0">
 		<material-content flex>
