--- a/src/main/webapp/components/user/add-modal.html
+++ b/src/main/webapp/components/user/add-modal.html
@@ -3,7 +3,7 @@
 		<h2 class="dialog-title" ng-if="!loading">Add a user</h2>
 		<material-content ng-if="!loading">
 			<form>
-			  <tf-float label="User Email" value="userEmail" type="email"> </tf-float>
+			  <tf-float label="User Email" value="$parent.userEmail" type="email"> </tf-float>
 			</form>
 		</material-content>	
 	</div>
