completed implementation of MemberActivityEvent (add)

--- a/src/main/webapp/components/activity/list.html
+++ b/src/main/webapp/components/activity/list.html
@@ -18,6 +18,7 @@
 								<material-icon ng-switch-when="TaskActivityEvent" icon="/img/icons/ic_view_list_48px.svg"></material-icon>
 								<material-icon ng-switch-when="ProjectActivityEvent" icon="/img/icons/ic_info_outline_48px.svg"></material-icon>
 								<material-icon ng-switch-when="MeetingActivityEvent" icon="/img/icons/ic_event_48px.svg"></material-icon>
+								<material-icon ng-switch-when="MemberActivityEvent" icon="/img/icons/ic_group_48px.svg"></material-icon>
 								<material-icon ng-switch-default icon="/img/icons/ic_info_outline_48px.svg"></material-icon>
 							</span>
 							{{activity.verb}}
