--- a/src/main/webapp/components/user/list.html
+++ b/src/main/webapp/components/user/list.html
@@ -12,8 +12,14 @@
 					<div class="material-tile-left">
 						<img ng-src="{{entity.iconUrl ? entity.iconUrl : '/img/face.png'}}" class="face" alt="{{entity.firstName}} {{entity.lastName}}">
 					</div>
-					<div class="material-tile-content">
+					<div class="material-tile-content" flex>
 						<h3>{{entity.firstName}} {{entity.lastName}}</h3>
+					</div>
+					<div class="material-tile-right">
+						 <material-button ng-if="entity.email != userInfo.emails[0].value" ng-click="removeMember(entity)">
+						 	<material-icon icon="/img/icons/ic_cancel_24px.svg"></material-icon>
+						 	<material-tooltip>Remove this user</material-tooltip>
+						 </material-button>
 					</div>
 				</material-item-content>
 				<material-divider ng-if="!$last"></material-divider>
