--- a/src/main/webapp/components/NotifyService/error-toast.html
+++ b/src/main/webapp/components/NotifyService/error-toast.html
@@ -1,4 +1,5 @@
 <material-toast>
 	<span flex>{{message}}</span>
-	<material-button ng-if="hasRetry" ng-click="retry()">Retry</material-button>
+	&nbsp;&nbsp;
+	<material-button ng-if="hasRetry" ng-click="retry()" class="text-error">Retry</material-button>
 </material-toast>
