--- a/src/main/webapp/components/NotifyService/info-toast.html
+++ b/src/main/webapp/components/NotifyService/info-toast.html
@@ -1,4 +1,5 @@
 <material-toast>
 	<span flex>{{message}}</span>
-	<material-button ng-if="hasUndo" ng-click="undo()">Undo</material-button>
+	&nbsp;&nbsp;
+	<material-button ng-if="hasUndo" ng-click="undo()" class="text-warning">Undo</material-button>
 </material-toast>
