--- a/src/main/webapp/components/sidebar/menu.html
+++ b/src/main/webapp/components/sidebar/menu.html
@@ -1,8 +1,3 @@
-<a ng-href="/#/project/{{routeParams.projectId}}" class="menu-item" route-active="'project'" ink-ripple>
-	<material-icon icon="/img/icons/ic_flash_on_24px.svg"></material-icon>
-	<span>Activity</span>
-</a>
-
 <a ng-href="/#/project/{{routeParams.projectId}}/tasks" class="menu-item" route-active="['task-list','task-edit']" ink-ripple>
 	<material-icon icon="/img/icons/ic_view_list_24px.svg"></material-icon>
 	<span>Tasks</span>
@@ -26,4 +21,9 @@
 <a ng-href="/#/project/{{routeParams.projectId}}/members" class="menu-item" route-active="'member-list'" ink-ripple>
 	<material-icon icon="/img/icons/ic_group_24px.svg"></material-icon>
 	<span>Members</span>
+</a>
+
+<a ng-href="/#/project/{{routeParams.projectId}}/activity" class="menu-item" route-active="'activity'" ink-ripple>
+	<material-icon icon="/img/icons/ic_flash_on_24px.svg"></material-icon>
+	<span>Activity</span>
 </a>
